fix: macOS dark mode

--- a/scss/_searchbar.scss
+++ b/scss/_searchbar.scss
@@ -1,4 +1,5 @@
 @use "sass:math";
+
 .search-bar{
   width: 100%;
   z-index: 10;
@@ -23,7 +24,7 @@ $height-clear: 16px;
     cursor: pointer;
     position: absolute;
     right: 5px;
-    top: math.div($height-input + $padding-input-tb - $height-clear, 2);
+    top: ($height-input + $padding-input-tb - $height-clear)/2;
     z-index: 10;
     height: 15px;
     width: 15px;
